--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 groq.api.key=${GROQ_API_KEY}
 
 spring.config.import=optional:file:.env[.properties]
-
+frontend.url=${FRONTEND_URL}
 
